Lesson 6 final commit

--- a/photos.css
+++ b/photos.css
@@ -1,7 +1,7 @@
 /*      
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author:  Nathalie Haas
+    Date:  03/23/2016
     Filename: photos.css
 */
 
